--- a/src/components/meetups/style.scss
+++ b/src/components/meetups/style.scss
@@ -53,7 +53,7 @@
         max-height: 385px;
 
         &:after {
-          content: "➕ ler mais";
+          content: "➕ leia mais";
           color: black;
           font-size: 23px;
           display: flex;
